# simple-allocator

./: CMakeLists.txt  README.md  allocator.cpp  allocator.h  main.cpp
